Integrating view and code in the main generator for entities

--- a/generators/app/templates/flutter/flutter-app/lib/app.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/app.dart.ejs
@@ -10,6 +10,7 @@ import 'package:flutter/material.dart';
 import 'package:<%= baseName %>/shared/repository/account_repository.dart';
 import 'package:<%= baseName %>/themes.dart';
 import 'account/settings/bloc/settings_bloc.dart';
+import 'package:<%= baseName %>/shared/models/entity_arguments.dart';
 
 import 'account/login/login_screen.dart';
 import 'account/register/register_screen.dart';
