--- a/generators/app/templates/flutter/flutter-app/pubspec.yaml.ejs
+++ b/generators/app/templates/flutter/flutter-app/pubspec.yaml.ejs
@@ -25,10 +25,11 @@ dependencies:
 <%_ } _%>
   cupertino_icons: 0.1.3
   http: 0.12.1
-  dart_json_mapper: 1.5.16
+  dart_json_mapper: 1.5.18
   dart_json_mapper_flutter: 1.0.0
   flutter_secure_storage: 3.3.3
   url_launcher: 5.4.11
+  datetime_picker_formfield: 1.0.0
 
   #BLoC pattern related
   formz: 0.2.0
