Fix bugs, Enum handles

--- a/generators/app/templates/flutter/flutter-app/lib/l10n/intl_en.arb.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/l10n/intl_en.arb.ejs
@@ -52,5 +52,8 @@
   "entityActionView": "View",
   "entityActionEdit": "Edit",
   "entityActionCreate": "Create",
-  "entityActionDelete": "Delete"
+  "entityActionDelete": "Delete",
+  "entityActionConfirmDelete": "Are you sure?",
+  "entityActionConfirmDeleteYes": "Yes",
+  "entityActionConfirmDeleteNo": "No"
 }
