--- a/generators/app/templates/flutter/flutter-app/lib/l10n/intl_fr.arb.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/l10n/intl_fr.arb.ejs
@@ -47,5 +47,8 @@
   "entityActionView": "Voir",
   "entityActionEdit": "Editer",
   "entityActionCreate": "Créer",
-  "entityActionDelete": "Supprimer"
+  "entityActionDelete": "Supprimer",
+  "entityActionConfirmDelete": "Êtes vous sûr ?",
+  "entityActionConfirmDeleteYes": "Oui",
+  "entityActionConfirmDeleteNo": "Non"
 }
